[package]
name = "ecvrf"
version = "0.2.2"
authors = ["Silur <abrahamendre9@gmail.com>"]
edition = "2018"
repository = "https://github.com/Silur/ECVRF.git"
license = "GPL-3.0-or-later"
description = "A curve25519+SHA3 verifiable random function"
readme = "README.md"

[dependencies]
rand = "0.6.5"
rand_os = "0.1.3"
curve25519-dalek = "1"
sha3 = "0.8.2"
